<resources>
    <string name="app_name">LearnAndroid</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="sysu_system">中山大学学生信息系统</string>
    <string name="sysu_student_id">学号：</string>
    <string name="sysu_student_id_input">请输入学号</string>
    <string name="sysu_student_password">密码：</string>
    <string name="sysu_student_password_input">请输入密码</string>
    <string name="sysu_teacher">教职工</string>
    <string name="sysu_student">学生</string>
    <string name="sysu_register">注册</string>
    <string name="sysu_sigin">登录</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="Recyclerview">RecyclerView</string>
    <string name="exit">Exit</string>
    <string name="animation">Animation</string>
    <string name="ui">UI</string>
    <string name="layout">Layout</string>
    <string name="ListLayout">ListLayout</string>
    <string name="StaggeredGrid">StaggeredGrid</string>
    <string name="webview">Webview</string>
    <string name="activity">Activity</string>
    <string name="thread">Thread</string>
    <string name="storage">Storage</string>
    <string name="components">Components</string>
    <string name="service">Service</string>
    <string name="library">Library</string>
    <string name="clock">clock</string>
    <string name="Download">Download</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_drawer_layout">DrawerLayoutActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="did_you_mean">Did you mean %s?</string>
</resources>