<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recyclerView.RecyclerIndexActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                style="@style/LinearLayoutIndexButton"
                android:text="@string/ListLayout" />


            <Button
                android:id="@+id/button2"
                style="@style/LinearLayoutIndexButton"
                android:layout_height="wrap_content"
                android:text="@string/StaggeredGrid" />

            <Button
                android:id="@+id/button_recycler_view"
                style="@style/LinearLayoutIndexButton"
                android:layout_height="match_parent"
                android:text="@string/Recyclerview" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>